Move more stuff from other visoin branch